--- a/style.css
+++ b/style.css
@@ -46,6 +46,62 @@ label {
     display: inline-block;
 }
 
+.button-contact{
+  border-radius: 5px;
+  background-color: green;
+  border-style: inset;
+  opacity: 1;
+  padding: 15px 32px;
+  color:white;
+  font-size: 20px;
+}
+.button-contact:hover{
+  box-shadow: 2px 5px #000000;
+  color:transparent;
+}
+.button-contact span:after{
+  content: 'CONTACT US';
+  font-family: "Times New Roman", Times, serif;
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+  font-size: 10px;
+  color:white;
+  
+}
+.button-contact2 span:after{
+  content: 'HOME';
+  font-family: "Times New Roman", Times, serif;
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+  font-size: 15px;
+  color:white;
+  
+}
+.button-contact:hover span {
+  padding-right: 25px;
+}
+.button-contact:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+.button-contact span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+.button-contact:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
 
 
 /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
@@ -188,7 +244,8 @@ li a {
   background-color:darkgreen;
   cursor: pointer;
   padding: 15px;
-  opacity: 0.4;
+  opacity: 0.7;
+  color: #ffffff;
 }
 
 #myBtn{
@@ -211,6 +268,7 @@ li a {
 .footer:hover{
   text-decoration: underline;
 }
+
 
 .img-fluid {
   max-width: 100%;
